# assets-inventory

./: README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/crates/api-http/: Cargo.toml
backend/crates/api-http/src/: auth.rs  config.rs  lib.rs  main.rs  openapi.rs  routes.rs  state.rs
backend/crates/api-http/src/handlers/: admin.rs  asset.rs  auth.rs  mod.rs
backend/crates/asset-grpc/: Cargo.toml  build.rs
backend/crates/asset-grpc/src/: admin_svc.rs  auth_svc.rs  jwt.rs  lib.rs  main.rs  metadata.rs  state.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: lib.rs  repository.rs  validation.rs
backend/crates/common/src/models/: admin.rs  asset.rs  mod.rs  user.rs  user_asset.rs
backend/crates/common/src/services/: asset_service.rs  mod.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: admin.rs  lib.rs  users.rs
backend/crates/health-grpc/: Cargo.toml  build.rs
backend/crates/health-grpc/src/: lib.rs  main.rs
backend/crates/runner/: Cargo.toml
backend/crates/runner/src/: main.rs
backend/migrations/: 20250411120000_init.sql  20250411120001_seed.sql  20250411120002_users.sql  20250411120004_admin_domain.sql  20250411120005_admin_seed.sql
backend/proto/: admin_v1.proto  asset_v1.proto  auth_v1.proto  health_v1.proto
backend/scripts/: repair_sqlx_missing_migration_03.sql
backend/src/: config.rs  lib.rs  main.rs  openapi.rs  routes.rs  state.rs
backend/src/handlers/: asset.rs
backend/src/models/: asset.rs  user_asset.rs
backend/src/services/: asset_service.rs
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/proto/: admin_v1.proto  auth_v1.proto
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx
frontend/src/app/admin/assets/: AssetsClientPage.tsx  page.tsx
frontend/src/app/admin/dashboard/: DashboardClientPage.tsx  page.tsx
frontend/src/app/admin/reports/: ReportsClientPage.tsx  page.tsx
frontend/src/app/admin/requests/: RequestsClientPage.tsx  page.tsx
frontend/src/app/admin/settings/: SettingsClientPage.tsx  page.tsx
frontend/src/app/api/admin/settings/: route.ts
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/asset/[id]/: AssetDetailClientPage.tsx  page.tsx
frontend/src/app/dashboard/: DashboardClientPage.tsx  page.tsx
frontend/src/app/history/: HistoryClientPage.tsx  page.tsx
frontend/src/app/login/: LoginClientPage.tsx  page.tsx
frontend/src/app/my-borrowings/: MyBorrowingsClientPage.tsx  page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AssetCard.tsx  AssetRow.tsx  AssetTable.tsx  EmptyState.tsx  FormInput.tsx  Navbar.tsx  PageHeader.tsx  SearchBar.tsx  Sidebar.tsx  StatsCard.tsx  StatusBadge.tsx  UserNavbar.tsx
frontend/src/components/admin/assets/: AdminAssetsContent.tsx
frontend/src/components/admin/dashboard/: AdminDashboardContent.tsx
frontend/src/components/admin/dashboard/parts/: DashboardStatCard.tsx  types.ts  (+6 more)
frontend/src/components/admin/reports/: AdminReportsContent.tsx
frontend/src/components/admin/requests/: AdminRequestCard.tsx  AdminRequestsContent.tsx  AdminRequestsList.tsx
frontend/src/components/admin/settings/: AdminSettingsContent.tsx  SettingsTermsForm.tsx
frontend/src/components/auth/: LogoutButton.tsx
frontend/src/components/layout/: AdminLayout.tsx  UserLayout.tsx
frontend/src/components/login/: LoginActions.tsx  LoginBackground.tsx  LoginCard.tsx  LoginFooterLinks.tsx  LoginForm.tsx  LoginFormCard.tsx  LoginHero.tsx  LoginVisualPanel.tsx
frontend/src/components/register/: RegisterFormCard.tsx
frontend/src/components/theme/: ThemeToggle.tsx  theme-utils.ts
frontend/src/components/ui/: GradientButton.tsx  PageIntro.tsx  RemoteAssetImage.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  table.tsx  textarea.tsx
frontend/src/components/user/asset-details/: AssetDetailsContent.tsx
frontend/src/components/user/dashboard/: UserAssetCard.tsx  UserDashboardContent.tsx
frontend/src/components/user/history/: BorrowHistoryContent.tsx
frontend/src/components/user/my-borrowings/: MyBorrowingsContent.tsx
frontend/src/components/user/shared/: AssetSpecCard.tsx  AssetStatusBadge.tsx  SimilarAssetCard.tsx
frontend/src/config/: app-config.ts
frontend/src/lib/: auth-server.ts  axios.ts  format-relative-time.ts  mockData.ts
frontend/src/lib/security/: asset-id.ts
frontend/src/models/: AdminApi.ts  Asset.ts  Borrow.ts  User.ts  UserAsset.ts
frontend/src/services/: AdminApiRepository.ts  AssetHttpRepository.ts  AssetService.ts  AuthService.ts  BorrowService.ts
frontend/src/services/grpc/: AssetGrpcRepository.ts  authActions.ts  createAssetGrpcClient.ts  grpc-unary.ts  grpcClients.ts
frontend/src/store/: useAssetStore.ts  useAuthStore.ts
frontend/src/stores/: useAuthStore.ts
frontend/stitch/: stitch-conversion.md
frontend/stitch/admin_asset_management/: code.html
frontend/stitch/admin_dashboard/: code.html
frontend/stitch/admin_reports_settings/: code.html
frontend/stitch/admin_requests/: code.html
frontend/stitch/asset_details/: code.html
frontend/stitch/borrowing_history/: code.html
frontend/stitch/indigo_ledger/: DESIGN.md
frontend/stitch/login/: code.html
frontend/stitch/my_borrowings/: code.html
frontend/stitch/user_dashboard/: code.html
(+3 files in other folders)
