[package]
name = "asset-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
