[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
common = { path = "../common" }
password-hash = "0.5"
rand = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "macros",
    "uuid",
] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
dotenvy = "0.15"
