[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
common = { path = "../common" }
password-hash = "0.5"
rand = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "macros",
    "uuid",
    "chrono",
] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
dotenvy = "0.15"
