[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
asset-grpc = { path = "../asset-grpc" }
common = { path = "../common" }
db = { path = "../db" }
dotenvy = "0.15"
health-grpc = { path = "../health-grpc" }
tokio = { version = "1", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
